2007-12-02  Daniel Sebald  <daniel.sebald@ieee.org>

	* configure.in, src/show.c (show_version) NEWS:  Added new feature
	--disable-x11-external. If selected, long versions shows +X11_EXTERNAL.

	* demo/gpdemos.tcl demo/Makefile.am.in: Added a wish/TCL demo that 
	displays gnuplot x11 output embedded in a tcl paneled window. The demo
	includes a minimal file browser that defaults to listing the contents of
	GNUPLOT_LIB.

	* src/gplt_x11.c (prepare_plot): Removed an integer argument that isn't
	necessary anymore after having implemented a linked list approach
	rather than a fixed number of possible plots.  Also, a plot number can
	no longer be negative.
	(record): Added an argument to the plot number command containing info
	about an external system X11 window ID.

	* src/gplt_x11.h: Added a control value for setting the X11 window ID.

	* term/x11.trm (X11_options): Added code for setting X11 window ID as
	string option.  Also, do not send command if window number is negative.

2007-12-01  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term.c (enhanced_recursion):  Give a warning if the enhanced text
	mode parser encounters an error.

	* src/unset.c (reset_command) docs/gnuplot.doc:  The `reset` command is
	documented to affect only the graphics output state.  Do not reset user
	interactions settings (locale, encoding, decimalsign).

2007-12-01  Allin Cottrell  <cottrell@wfu.edu>

	* src/set.c src/term_api.h src/term.c docs/gnuplot.doc
	term/aquaterm.trm  term/post.trm term/pslatex.trm term/svg.trm
	term/PostScript/8859-9.ps:  Add encoding ISO_8859_9 (Latin5).

2007-12-01  Thomas Orgis  <sobukus@users.sourceforge.net>

	* src/gplt_x11.c (process_configure_notify_event):  Test for failure of
	window resize, and do not loop indefinitely trying to resize. Fixes
	infinite loop problem on ion and fluxbox window managers.
	Bug #1836959 #1614928

2007-11-29  Lars Hecking  <lhecking@users.sourceforge.net>
